# OpenGLPlayground

./: .gitignore  CMakeLists.txt
include/: Camera.h  Shader.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Shader.cpp  main.cpp
